test/valid/58215_linha/linha.agu
-- Author: 58215, Manuel Lourenço

let linha (n) : Int -> Unit =
    let i : Int = 0;
    while i < n do (
        print("*\n");
        set i = i-1
    )

let main : Unit =
    linha(4)