test/invalid-syntax/58215_scope/scope.agu
-- Author: 58215, Manuel Lourenço

let aux (y) : Int -> Int
    let x : Int = 5;
    y

let main : Unit =
    aux(4);
    print(x)